Closed Bug 1669359 Opened 4 years ago Closed 4 years ago

Assertion "Broken tree?!" reached when browsing wikipedia with VoiceOver on

Categories

(Core :: Disability Access APIs, defect, P1)

All
macOS
defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox83 --- fixed

People

(Reporter: eeejay, Assigned: eeejay)

Details

(Whiteboard: [mac2020_2])

Attachments

(1 file)

Looks like the less-than operator is not fully implemented and needs to handle the case when one point's container is the descendant of another.

Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/625e28a27a7c
Fix GeckoTextMarker lesser-than operator. r=morgan
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: