Bug 1669359 - Fix GeckoTextMarker lesser-than operator. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D92511